--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>全宇宙最帅的男子汉，是爸爸</title>
+	<title>人家才不会告诉你机器人知道她的电话</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="我爱你" />
 	<meta name="description" content="主人永远是最棒哒 " />
