--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var _hmt = _hmt || [];
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shanxiaomeng520.github.io" class="thumbnail">
+				<a href="https://user.qzone.qq.com/541609206/main" class="thumbnail">
 					<img src="img/4.jpg" alt="...">
 				</a>
 			</div>
@@ -52,7 +52,7 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shanxiaomeng520.github.io" class="thumbnail">
+				<a href="https://user.qzone.qq.com/2929806406" class="thumbnail">
 					<img src="img/6.jpg" alt="...">
 				</a>
 			</div>
